Some translate Fix

--- a/locales/zh/filters.json
+++ b/locales/zh/filters.json
@@ -29,7 +29,7 @@
 	},
 	{
 		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
-		"hostlist.7.description": "这是一个阻止智能电视将元数据发送回家的阻止列表，有时还具有阻止应用程序和电影服务的界面广告的额外好处。"
+		"hostlist.7.description": "这是一个阻止智能电视将日志等数据发送到服务器的阻止列表，有时还具有阻止应用程序和电影服务的界面广告的额外好处。"
 	},
 	{
 		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
@@ -65,7 +65,11 @@
 	},
 	{
 		"hostlist.21.name": "CHN: anti-AD",
-		"hostlist.21.description": "致力于成为中国地区点击率最高的广告过滤列表，实现精准的广告拦截和隐私保护。"
+		"hostlist.21.description": "致力于成为中文区命中率最高的广告过滤列表，实现精确的广告屏蔽和隐私保护。"
+	},
+        {
+		"hostlist.29.name": "CHN: AdRules DNS List",
+		"hostlist.29.description": "基于中国区域的广告过滤器列表，实现了相对准确的广告屏蔽。"
 	},
 	{
 		"hostlist.22.name": "IDN: ABPindo",
