fix english strings

--- a/locales/en/tags.json
+++ b/locales/en/tags.json
@@ -12,8 +12,8 @@
 		"hostlisttag.3.description": "Lists that focus on regional ads and tracking servers."
 	},
 	{
-		"hostlisttag.100.name": "Norvegian language-specific blocking",
-		"hostlisttag.100.description": "Designed specifically to block ads or other unwanted content in Norvegian language."
+		"hostlisttag.100.name": "Norwegian language-specific blocking",
+		"hostlisttag.100.description": "Designed specifically to block ads or other unwanted content in Norwegian language."
 	},
 	{
 		"hostlisttag.101.name": "Polish language-specific blocking",
@@ -40,8 +40,8 @@
 		"hostlisttag.106.description": "Designed specifically to block ads or other unwanted content in Iranian language."
 	},
 	{
-		"hostlisttag.107.name": "Makedonian language-specific blocking",
-		"hostlisttag.107.description": "Designed specifically to block ads or other unwanted content in Makedonian language."
+		"hostlisttag.107.name": "Macedonian language-specific blocking",
+		"hostlisttag.107.description": "Designed specifically to block ads or other unwanted content in Macedonian language."
 	},
 	{
 		"hostlisttag.108.name": "Chinese language-specific blocking",
