fix tags en locale

--- a/locales/en/tags.json
+++ b/locales/en/tags.json
@@ -36,8 +36,8 @@
 		"hostlisttag.105.description": "Designed specifically to block ads or other unwanted content in Italian language."
 	},
 	{
-		"hostlisttag.106.name": "Iranian language-specific blocking",
-		"hostlisttag.106.description": "Designed specifically to block ads or other unwanted content in Iranian language."
+		"hostlisttag.106.name": "Persian language-specific blocking",
+		"hostlisttag.106.description": "Designed specifically to block ads or other unwanted content in Persian language."
 	},
 	{
 		"hostlisttag.107.name": "Macedonian language-specific blocking",
