updated tags en locale

--- a/locales/en/tags.json
+++ b/locales/en/tags.json
@@ -13,43 +13,43 @@
 	},
 	{
 		"hostlisttag.100.name": "Norwegian language-specific blocking",
-		"hostlisttag.100.description": "Designed specifically to block ads or other unwanted content in Norwegian language."
+		"hostlisttag.100.description": "Designed specifically to block ads or other unwanted content in the Norwegian language."
 	},
 	{
 		"hostlisttag.101.name": "Polish language-specific blocking",
-		"hostlisttag.101.description": "Designed specifically to block ads or other unwanted content in Polish language."
+		"hostlisttag.101.description": "Designed specifically to block ads or other unwanted content in the Polish language."
 	},
 	{
 		"hostlisttag.102.name": "Korean language-specific blocking",
-		"hostlisttag.102.description": "Designed specifically to block ads or other unwanted content in Korean language."
+		"hostlisttag.102.description": "Designed specifically to block ads or other unwanted content in the Korean language."
 	},
 	{
 		"hostlisttag.103.name": "Vietnamese language-specific blocking",
-		"hostlisttag.103.description": "Designed specifically to block ads or other unwanted content in Vietnamese language."
+		"hostlisttag.103.description": "Designed specifically to block ads or other unwanted content in the Vietnamese language."
 	},
 	{
 		"hostlisttag.104.name": "Swedish language-specific blocking",
-		"hostlisttag.104.description": "Designed specifically to block ads or other unwanted content in Swedish language."
+		"hostlisttag.104.description": "Designed specifically to block ads or other unwanted content in the Swedish language."
 	},
 	{
 		"hostlisttag.105.name": "Italian language-specific blocking",
-		"hostlisttag.105.description": "Designed specifically to block ads or other unwanted content in Italian language."
+		"hostlisttag.105.description": "Designed specifically to block ads or other unwanted content in the Italian language."
 	},
 	{
 		"hostlisttag.106.name": "Persian language-specific blocking",
-		"hostlisttag.106.description": "Designed specifically to block ads or other unwanted content in Persian language."
+		"hostlisttag.106.description": "Designed specifically to block ads or other unwanted content in the Persian language."
 	},
 	{
 		"hostlisttag.107.name": "Macedonian language-specific blocking",
-		"hostlisttag.107.description": "Designed specifically to block ads or other unwanted content in Macedonian language."
+		"hostlisttag.107.description": "Designed specifically to block ads or other unwanted content in the Macedonian language."
 	},
 	{
 		"hostlisttag.108.name": "Chinese language-specific blocking",
-		"hostlisttag.108.description": "Designed specifically to block ads or other unwanted content in Chinese language."
+		"hostlisttag.108.description": "Designed specifically to block ads or other unwanted content in the Chinese language."
 	},
 	{
 		"hostlisttag.109.name": "Indonesian language-specific blocking",
-		"hostlisttag.109.description": "Designed specifically to block ads or other unwanted content in Indonesian language."
+		"hostlisttag.109.description": "Designed specifically to block ads or other unwanted content in the Indonesian language."
 	},
 	{
 		"hostlisttag.2.name": "Security",
@@ -57,7 +57,7 @@
 	},
 	{
 		"hostlisttag.110.name": "Turkish language-specific blocking",
-		"hostlisttag.110.description": "Designed specifically to block ads or other unwanted content in Turkish language."
+		"hostlisttag.110.description": "Designed specifically to block ads or other unwanted content in the Turkish language."
 	},
 	{
 		"hostlisttag.111.name": "Problematic",
