--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -56,8 +56,8 @@
 		"hostlist.18.description": "List for blocking ads on Italian websites based on Easylist Italy and ADB X Files"
 	},
 	{
-		"hostlist.19.name": "IRN: Unwanted Iranian domains",
-		"hostlist.19.description": "List of categorized undesired hosts"
+		"hostlist.19.name": "IRN: PersianBlocker list",
+		"hostlist.19.description": "Optimal and extensive list for blocking ads and trackers on Persian language sites"
 	},
 	{
 		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
@@ -118,5 +118,17 @@
 	{
 		"hostlist.30.name": "Phishing URL Blocklist (PhishTank and OpenPhish)",
 		"hostlist.30.description": "Blocklist of phishing websites, based on PhishTank and OpenPhish lists"
+	},
+	{
+		"hostlist.32.name": "The NoTracking blocklist",
+		"hostlist.32.description": "The NoTracking blocklist is a DNS based filter list for blocking ads, malware, phising and other online garbage."
+	},
+	{
+		"hostlist.33.name": "Steven Black's List",
+		"hostlist.33.description": "Unified hosts file with base extensions (fakenews + gambling + porn)."
+	},
+	{
+		"hostlist.31.name": "Stalkerware Indicators List",
+		"hostlist.31.description": "Indicators of compromise on Stalkerware applications for Android and iOS."
 	}
 ]
